# argus-observe-rules

./: .gitignore  .prettierrc.yml  .yamlfmt  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
cli/: __init__.py  main.py
configs/: crypto-all.yml  crypto-c.yml  crypto-cpp.yml  crypto-csharp.yml  crypto-go.yml  crypto-java.yml  crypto-javascript.yml  crypto-python.yml  crypto-rust.yml  crypto-typescript.yml  go-runtime-security.yml  python-pqc.yml
rules/tools/codeql/: codeql-config-file.yml  codeql-database-commands.yml  codeql-github-actions.yml
rules/tools/dependabot/: dependabot-config.yml  dependabot-github-actions.yml
rules/tools/gosec/: gosec-ci-config.yml  gosec-config-files.yml  gosec-dockerfile.yml  gosec-github-actions.yml  gosec-go-mod.yml  gosec-makefile.yml  gosec-scripts.yml
rules/tools/govulncheck/: govulncheck-config.yml  govulncheck-docker.yml  govulncheck-github-actions.yml  govulncheck-go-mod.yml  govulncheck-go-sum.yml  govulncheck-makefile.yml  govulncheck-scripts.yml
rules/tools/renovate/: renovate-config-files.yml  renovate-github-actions.yml  renovate-package-json.yml
rules/tools/semgrep/: semgrep-config-files.yml  semgrep-github-actions.yml  semgrep-makefile.yml  semgrep-scripts.yml
scripts/: generate_c_pqc_runtime.py  generate_cpp_pqc_runtime.py  generate_csharp_pqc_runtime.py  generate_java_pqc_runtime.py  generate_javascript_pqc_runtime.py  generate_python_pqc_runtime.py  generate_rust_pqc_runtime.py  generate_typescript_pqc_runtime.py  regenerate-configs.sh
(+2234 files in other folders)
