[project]
name = "argus-observe-rules"
version = "0.1.0"
description = "Security rules for code observation and governance"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "semgrep>=1.137.0",
]

[project.scripts]
observe = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]

[project.optional-dependencies]
dev = [
    "ruff",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
ignore = [
    "E501",  # line too long, handled by ruff format
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["scanner", "common"]
